Use JdbcClient instead of JdbcTemplate for posts (#32)